--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testImplementation "net.jqwik:jqwik:_"
 
     implementation 'org.apache.commons:commons-lang3:_'
+    implementation 'com.google.guava:guava:_'
+
     testImplementation 'org.apache.commons:commons-math3:_'
 
     jmh 'org.openjdk.jmh:jmh-core:_'
