--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.google.guava..guava=33.0.0-jre
+
 version.net.jqwik..jqwik=1.8.2
 
 version.junit.jupiter=5.10.1
@@ -21,8 +23,6 @@ version.org.apache.commons..commons-math3=3.6.1
 
 version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 
-## unused
-version.org.openjdk.jmh..jmh-generator-bytecode=1.36
+version.org.openjdk.jmh..jmh-core=1.37
 
-## unused
-version.org.openjdk.jmh..jmh-core=1.36
+version.org.openjdk.jmh..jmh-generator-bytecode=1.36
