--- a/versions.properties
+++ b/versions.properties
@@ -11,18 +11,16 @@ version.com.google.guava..guava=33.0.0-jre
 
 version.net.jqwik..jqwik=1.8.2
 
-version.junit.jupiter=5.10.1
+version.junit.jupiter=5.10.2
 
-version.assertj.core=3.25.1
+version.assertj.core=3.25.3
 
 plugin.me.champeau.jmh=0.7.2
 
 version.org.apache.commons..commons-lang3=3.14.0
 
-version.org.apache.commons..commons-math3=3.6.1
+version.org.apache.commons..commons-numbers-core=1.1
 
 version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 
 version.org.openjdk.jmh..jmh-core=1.37
-
-version.org.openjdk.jmh..jmh-generator-bytecode=1.36
