--- a/versions.properties
+++ b/versions.properties
@@ -24,3 +24,5 @@ version.org.apache.commons..commons-numbers-core=1.2
 version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 
 version.org.openjdk.jmh..jmh-core=1.37
+
+version.org.awaitility..awaitility=4.3.0
