--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,6 @@ tasks.withType(JavaExec).configureEach {
 }
 
 jmh {
-    includes = ["(?i)slotted"]
+    includes = ["(?i)increment"]
     threads = Integer.getInteger("jmhThreads", 1)
 }
