--- a/versions.properties
+++ b/versions.properties
@@ -17,6 +17,8 @@ version.assertj.core=3.27.3
 
 plugin.me.champeau.jmh=0.7.3
 
+plugin.io.morethan.jmhreport=0.9.0
+
 version.org.apache.commons..commons-lang3=3.17.0
 
 version.org.apache.commons..commons-numbers-core=1.2
