--- a/versions.properties
+++ b/versions.properties
@@ -7,7 +7,11 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.google.code.findbugs..jsr305=3.0.2
+
 version.com.google.guava..guava=33.4.8-jre
+
+version.jakarta.annotation..jakarta.annotation-api=3.0.0
 
 version.net.jqwik..jqwik=1.9.2
 
@@ -28,3 +32,5 @@ version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 version.org.openjdk.jmh..jmh-core=1.37
 
 version.org.awaitility..awaitility=4.3.0
+
+version.org.openjdk.jmh..jmh-generator-bytecode=1.37
