--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     testImplementation Testing.assertj.core
     testImplementation Testing.junit.jupiter
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     testImplementation "net.jqwik:jqwik:_"
 
     implementation 'org.apache.commons:commons-lang3:_'
