--- a/versions.properties
+++ b/versions.properties
@@ -16,8 +16,11 @@ version.jakarta.annotation..jakarta.annotation-api=3.0.0
 version.net.jqwik..jqwik=1.9.3
 
 version.junit.jupiter=5.13.4
+##        # available=6.0.0-M1
+##        # available=6.0.0-M2
 
 version.assertj.core=3.27.3
+##       # available=4.0.0-M1
 
 plugin.me.champeau.jmh=0.7.3
 
@@ -34,3 +37,7 @@ version.org.openjdk.jmh..jmh-core=1.37
 version.org.awaitility..awaitility=4.3.0
 
 version.org.openjdk.jmh..jmh-generator-bytecode=1.37
+
+plugin.io.github.reyerizo.gradle.jcstress=0.8.15
+
+version.org.openjdk.jcstress..jcstress-core=0.17-SNAPSHOT
