--- a/versions.properties
+++ b/versions.properties
@@ -13,17 +13,17 @@ version.com.google.guava..guava=33.4.8-jre
 
 version.jakarta.annotation..jakarta.annotation-api=3.0.0
 
-version.net.jqwik..jqwik=1.9.2
+version.net.jqwik..jqwik=1.9.3
 
 version.junit.jupiter=5.12.2
 
-version.assertj.core=3.27.3
+version.assertj.core=3.27.4
 
 plugin.me.champeau.jmh=0.7.3
 
 plugin.io.morethan.jmhreport=0.9.6
 
-version.org.apache.commons..commons-lang3=3.17.0
+version.org.apache.commons..commons-lang3=3.18.0
 
 version.org.apache.commons..commons-numbers-core=1.2
 
@@ -34,3 +34,7 @@ version.org.openjdk.jmh..jmh-core=1.37
 version.org.awaitility..awaitility=4.3.0
 
 version.org.openjdk.jmh..jmh-generator-bytecode=1.37
+
+version.com.vmlens..api=1.2.11
+
+version.com.vmlens..standalone=1.2.11
