--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ tasks.withType(JavaExec).configureEach {
 }
 
 jmh {
-    includes = ["ThreadSleep0Benchmark\\."]
+    includes = ["\\bCastingBenchmark"]
     threads = Integer.getInteger("jmhThreads", 1)
     resultFormat = "JSON"
     //profilers = ["jfr"]
