--- a/versions.properties
+++ b/versions.properties
@@ -27,10 +27,18 @@ version.org.apache.commons..commons-lang3=3.18.0
 
 version.org.apache.commons..commons-numbers-core=1.2
 
-version.org.openjdk.jmh..jmh-generator-annprocess=1.37
+version.org.junit.platform..junit-platform-launcher=1.13.4
+##                                      # available=6.0.0-M1
+##                                      # available=6.0.0-M2
+##                                      # available=6.0.0-RC1
 
-version.org.openjdk.jmh..jmh-core=1.37
+version.org.openjdk.jmh..jmh-core=1.36
+
 
 version.org.awaitility..awaitility=4.3.0
 
 version.org.openjdk.jmh..jmh-generator-bytecode=1.37
+
+version.org.openjdk.jmh..jmh-generator-annprocess=1.37
+
+version.io.github.fzhinkin..xctraceprof=0.0.3
