--- a/versions.properties
+++ b/versions.properties
@@ -34,3 +34,5 @@ version.org.openjdk.jmh..jmh-core=1.37
 version.org.awaitility..awaitility=4.3.0
 
 version.org.openjdk.jmh..jmh-generator-bytecode=1.37
+
+version.io.github.fzhinkin..xctraceprof=0.0.3
