--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
-    id "me.champeau.jmh"
-    id "io.morethan.jmhreport"
+    id "me.champeau.jmh" version "0.7.3"
+    id "io.morethan.jmhreport" version "0.9.6"
+    id "com.gradleup.shadow" version "9.2.2"
 }
 
 group = 'at.mlangc'
@@ -75,11 +76,14 @@ jmh {
     includes = ["BurstFilterBenchmark.logMarkerBasedBurstFilter"]
     threads = Integer.getInteger("jmhThreads", 1)
     resultFormat = "JSON"
+    duplicateClassesStrategy = DuplicatesStrategy.INCLUDE
     //profilers = ["org.openjdk.jmh.profile.XCTraceAsmProfiler"]
 }
 
 jmhJar {
-
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.ServicesResourceTransformer)
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.ManifestResourceTransformer)
 }
 
 jmhReport {
