--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 dependencies {
     testImplementation Testing.assertj.core
     testImplementation Testing.junit.jupiter
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:_"
     testImplementation "net.jqwik:jqwik:_"
 
     implementation 'org.apache.commons:commons-lang3:_'
@@ -26,6 +26,14 @@ dependencies {
     testImplementation 'org.awaitility:awaitility:_'
 
     implementation 'org.apache.commons:commons-numbers-core:_'
+
+    implementation 'org.apache.kafka:kafka-clients:_'
+
+    implementation 'org.apache.logging.log4j:log4j-api:_'
+    implementation 'org.apache.logging.log4j:log4j-core:_'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:_'
+    implementation 'io.github.michaljonko:dynatrace-log4j2-appender:0.0.7'
+
 
     jmh 'org.openjdk.jmh:jmh-core:_'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:_'
