--- a/versions.properties
+++ b/versions.properties
@@ -27,6 +27,18 @@ version.org.apache.commons..commons-lang3=3.20.0
 
 version.org.apache.commons..commons-numbers-core=1.2
 
+version.org.apache.kafka..kafka-clients=3.9.1
+
+version.org.apache.logging.log4j..log4j-bom=2.25.2
+
+version.org.apache.logging.log4j..log4j-core=2.25.2
+
+version.org.apache.logging.log4j..log4j-slf4j2-impl=2.25.2
+
+version.org.apache.logging.log4j..log4j-api=2.12.0
+
+version.org.junit.platform..junit-platform-launcher=6.0.1
+
 version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 
 version.org.openjdk.jmh..jmh-core=1.37
