--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,10 @@ version.com.google.code.findbugs..jsr305=3.0.2
 
 version.com.google.guava..guava=33.5.0-jre
 
+version.io.micrometer..micrometer-registry-dynatrace=1.16.0
+
+version.io.github.michaljonko..dynatrace-log4j2-appender=0.0.7
+
 version.jakarta.annotation..jakarta.annotation-api=3.0.0
 
 version.net.jqwik..jqwik=1.9.3
@@ -29,13 +33,14 @@ version.org.apache.commons..commons-numbers-core=1.2
 
 version.org.apache.kafka..kafka-clients=3.9.1
 
+## unused
 version.org.apache.logging.log4j..log4j-bom=2.25.2
 
 version.org.apache.logging.log4j..log4j-core=2.25.2
 
 version.org.apache.logging.log4j..log4j-slf4j2-impl=2.25.2
 
-version.org.apache.logging.log4j..log4j-api=2.12.0
+version.org.apache.logging.log4j..log4j-api=2.25.2
 
 version.org.junit.platform..junit-platform-launcher=6.0.1
 
