--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 dependencies {
     testImplementation Testing.assertj.core
     testImplementation Testing.junit.jupiter
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:_"
     testImplementation "net.jqwik:jqwik:_"
 
     implementation 'org.apache.commons:commons-lang3:_'
@@ -23,7 +23,12 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:_'
     testImplementation 'org.awaitility:awaitility:_'
 
-    implementation 'io.micrometer:micrometer-registry-dynatrace:1.16.0'
+    implementation 'io.micrometer:micrometer-registry-dynatrace:_'
+
+    implementation 'org.apache.logging.log4j:log4j-api:_'
+    implementation 'org.apache.logging.log4j:log4j-core:_'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:_'
+    implementation 'io.github.michaljonko:dynatrace-log4j2-appender:_'
 
     implementation 'org.apache.commons:commons-numbers-core:_'
 
