--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,8 @@ version.com.google.code.findbugs..jsr305=3.0.2
 
 version.com.google.guava..guava=33.5.0-jre
 
+version.io.micrometer..micrometer-registry-dynatrace=1.16.0
+
 version.jakarta.annotation..jakarta.annotation-api=3.0.0
 
 version.net.jqwik..jqwik=1.9.3
@@ -27,6 +29,10 @@ version.org.apache.commons..commons-lang3=3.20.0
 
 version.org.apache.commons..commons-numbers-core=1.2
 
+version.org.apache.logging.log4j..log4j-api=2.25.2
+
+version.org.junit.platform..junit-platform-launcher=6.0.1
+
 version.org.openjdk.jmh..jmh-generator-annprocess=1.37
 
 version.org.openjdk.jmh..jmh-core=1.37
@@ -36,3 +42,9 @@ version.org.awaitility..awaitility=4.3.0
 version.org.openjdk.jmh..jmh-generator-bytecode=1.37
 
 version.io.github.fzhinkin..xctraceprof=0.0.3
+
+version.org.apache.logging.log4j..log4j-core=2.25.2
+
+version.org.apache.logging.log4j..log4j-slf4j2-impl=2.25.2
+
+version.io.github.michaljonko..dynatrace-log4j2-appender=0.0.7
