--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,8 @@ version.com.google.code.findbugs..jsr305=3.0.2
 
 version.com.google.guava..guava=33.5.0-jre
 
+version.com.lmax..disruptor=4.0.0
+
 version.io.micrometer..micrometer-registry-dynatrace=1.16.0
 
 version.jakarta.annotation..jakarta.annotation-api=3.0.0
